written summary update

--- a/documentation/written summary/proceedings.tex
+++ b/documentation/written summary/proceedings.tex
@@ -126,69 +126,78 @@
 \maketitle
 
 \begin{abstract}
- 1/4 page
+ 1/4 page (Lena)
 \end{abstract}
 
 % \keywords{\plainkeywords}
 
 \section{Introduction}
-1/4 page intro
+1/4 page intro (Kevin)
 \subsection{Motivation}
-1/2 page
+1/2 page (Kevin)
 \subsection{Goal}
-1/4 page
+1/4 page (Kevin)
 \subsection{Outline}
-1/4 page\\
+1/4 page (Kevin)\\
 ---\\
 TOTAL: 1.25 Pages
 
 \section{Related Work}
 \subsection{Gaze Input Performance}
-1/2 page
+1/2 page (Kevin)
 \subsection{Mouse Against Gaze Input}
-1/2 page
+1/2 page (Kevin)
 \subsection{Immersive Game Controll Using Gaze}
-1/4 page
+1/4 page (Lena)
 \subsection{Pursuit Calibration}
-1/4 page\\
+1/4 page (Lena)\\
 ---\\
 TOTAL: 1.5 Pages
 
 \section{Requirements and Design}
-\subsection{Design Decisions}
-1/2 page
+\subsection{Gaze Interaction Design Decisions}
+1/2 page (Marco) (Farben, Content Adaption (private public shared areas), radius)
 \subsection{Agile Development Approach}
-1/4 page
+1/4 page (Marco)
 \subsection{Formal Requirements}
-1/2 page\\
+1/2 page (Marco)\\
 ---\\
 TOTAL: 1.25 Pages
 
 \section{Implementation}
 1/4 page intro
 \subsection{Hardware}
-1/4 page
+1/4 page (Kevin)
 \subsection{Software}
 2 pages
-\subsubsection{Maze Generator}
-\subsubsection{...}
+\subsubsection{Menu} Lena
+\subsubsection{Maze Generator} Marco
+\subsubsection{Power-Ups} Marco
+\subsubsection{Smart Player Controls} Kevin
+\subsubsection{Game Fairness} Kevin
+\subsubsection{Pupil Integration} Kevin
+\subsubsection{Calibration} Kevin
+\subsubsection{Game Lobbys} Kevin
+\subsubsection{Graphical Interface} Marco
 ---\\
 TOTAL: 2.5 pages
 
 
 \section{Evaluation}
 \subsection{Performance}
-1/4 page
+1/4 page (Lena)
 \subsection{User-Experience}
-1/4 page\\
+1/4 page (Lena)\\
 ---\\
 TOTAL: 0.5 page
 
 \section{Conclusion}
 \subsection{Résume}
-1/4 page
+1/4 page (Lena)
+\subsection{Lessons Learned}
+1/4 page (Kevin)
 \subsection{Future Work}
-1/2 page\\
+1/2 page (Marco)\\
 ---\\
 TOTAL: 0.75 page
 
