Added menu section

--- a/documentation/written summary/proceedings.tex
+++ b/documentation/written summary/proceedings.tex
@@ -113,7 +113,7 @@
     \affaddr{Saarland University}\\
     \affaddr{Saarbr{\"u}cken, Germany}\\
     \email{s9kvmuel@stud.uni-saarland.de}}\\
-  \alignauthor{Marco Siveris\\
+  \alignauthor{Marco Siweris\\
     \affaddr{Saarland University}\\
     \affaddr{Saarbr{\"u}cken, Germany}\\
     \email{e-mail address}}\\
@@ -179,7 +179,8 @@ TOTAL: 1.25 Pages
 1/4 page (Kevin)
 \subsection{Software}
 2 pages
-\subsubsection{Menu} Lena
+\subsubsection{Menu}
+At the beginning of the game you can choose between many game configurations. You have the option to start the game, to finish the application, to get some help information (e.g. link to GitLab) and to call settings, where you can connect to new clients, disconnect connected clients and calibrate clients. On starting the game you can set the game configurations. You can choose the number of players, the number of rounds you want to play and the difficulty of the game (simple, medium or hard) which affects the size of the labyrinth and the paths. If the game lasts longer than one round the next round starts automatically after a short break. The game also supports in-game interruptions with a break button. In this interruption mode you can continue the game and also go back to the main menu.
 \subsubsection{Maze Generator} Marco
 \subsubsection{Power-Ups} Marco
 \subsubsection{Smart Player Controls} Kevin
